[metadata]
name = antlr4-vba-parser
author = Liam Deacon
author-email = liam.m.deacon@gmail.com
summary = Parse VBA grammar using ANTLR4 and python
license = BSD 3-Clause License
version = 0.0.2
license_files = LICENSE
description-file =
    README.md
home-page = https://github.com/Liam-Deacon/antlr4-vba-parser
requires-python = >=3.5
publisher = Liam Deacon
classifier = 
    Development Status :: 4 - Beta
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[bdist_wheel]
universal = 1

[options.packages.find]
exclude =
    docs
    test

[cython-defaults]
include_dirs =
    include/
    eval(__import__('numpy').get_include())
language_level=3

[extras]
all=
    geopandas

[aliases]
test=pytest
install_all=build_static install

[tool:pytest]
addopts =
    --verbose
    --cov=antlr4_vba_parser/
    --cov-branch
    --cov-report=xml
    --cov-report=html
    --cov-report=term
    --doctest-modules
console_output_style=progress
testpaths = test
python_files = [Ttest]*.py

[coverage:report]
omit=

[prospector]
with-tool=
    mypy
    pyroma

[pycodestyle]
max-line-length=120
ignore=E402,W504

[pydocstyle]
# ignore=D401,D404
convention=numpy

[yapf]
based_on_style = google
spaces_before_comment = 2
split_before_logical_operator = false

[check-manifest]
ignore = azure-pipelines.yaml,test
verbose = true

[bandit]
exclude = test,tests,doc,dist
exclude_dirs = test,tests,doc,dist
level = LOW
confidence = HIGH
ignore-nosec = true
verbose = true

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[pylint]
confidence=
load-plugins=pylint.extensions.docparams
ignore=migrations
ignore-long-lines=^\s*(# )?<?https?://\S+>?$
indent-string='    '
max-line-length=120
max-module-lines=1000
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=no
min-similarity-lines=4
good-names=i,j,k,ex,Run,_
bad-names=foo,bar,baz,toto,tutu,tata
include-naming-hint=yes
max-args=5
max-locals=15
max-attributes=7
max-bool-expr=5
max-branches=12
max-parents=7
max-public-methods=20
max-returns=6
max-statements=50
min-public-methods=2
overgeneral-exceptions=Exception
argument-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
argument-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
attr-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
attr-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
class-attribute-name-hint=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
class-attribute-rgx=([A-Za-z_][A-Za-z0-9_]{2,30}|(__.*__))$
class-name-hint=[A-Z_][a-zA-Z0-9]+$
class-rgx=[A-Z_][a-zA-Z0-9]+$
const-name-hint=(([A-Z_][A-Z0-9_]*)|(__.*__))$
const-rgx=(([A-Z_][A-Z0-9_]*)|(__.*__))$
docstring-min-length=-1
function-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
function-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
inlinevar-name-hint=[A-Za-z_][A-Za-z0-9_]*$
inlinevar-rgx=[A-Za-z_][A-Za-z0-9_]*$
method-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
method-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
module-name-hint=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
module-rgx=(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$
name-group=
no-docstring-rgx=^_
property-classes=abc.abstractproperty
variable-name-hint=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$
variable-rgx=(([a-z][a-z0-9_]{2,30})|(_[a-z0-9_]*))$

[mypy]
ignore_missing_imports=1
check_untyped_defs=1
warn_incomplete_stub=1
strict_optional=0
warn_redundant_casts=1
warn_return_any=1
warn_unused_ignores=1
show_error_context=1
html_report=.mypy-report
linecoverage_report=.mypy-report
xml_report=.mypy-report
show_traceback=1
namespace_packages=1
warn_unreachable=1

[flake8]
max-line-length=120
max-complexity=10
exclude=
    build
    dist
    doc/conf.py
    docs/conf.py
    tests
    *.egg-info
    .tox
    .eggs

[nosetests]
with-doctest=1
doctest-extension=.rst
doctest-fixtures=_fixtures
verbosity=2
ignore-files=
exe=True
